<resources>
    <string name="app_name">Reservation</string>
    <string name="name">name</string>
    <string name="MN">Mobile number</string>
    <string name="GS">group size</string>
    <string name="smoking">smoking</string>
    <string name="confirm">confirm</string>
    <string name="default">default</string>
    <string name="default">default</string>
    <string name="DeF">default</string>
    <string name="resT">reset</string>
</resources>
